--- a/TF.ipynb
+++ b/TF.ipynb
@@ -22,7 +22,12 @@
     "colab": {
       "name": "TF.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "4kjyNVnaF1Ti",
+        "6gN9CKOfF1Tq",
+        "eN8B_2H7F1Tx",
+        "ES3uCxmLF1T8"
+      ],
       "include_colab_link": true
     }
   },
@@ -102,11 +107,18 @@
         "id": "Pk7IFw1rF1Tp"
       },
       "source": [
-        "El interés por utilizar capas ocultas ha superado las técnicas tradicionales, especialmente en el reconocimiento de patrones.\n",
+        "En 2012, la visión computacional presenció un gran avance cuando un grupo de investigadores de la Universidad de Toronto desarrolló AlexNet, un sistema que se basaba en redes convolucionales artificiales, o CNN por sus siglas en inglés. $^{[2]}$ Este modelo superó a los mejores algoritmos de reconocimiento de imágenes por un amplio margen."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6J7cuWth1ioO"
+      },
+      "source": [
+        "<img src='https://editor.analyticsvidhya.com/uploads/183560_qcMBDPuKpDvICcdd.png'>\n",
         "\n",
-        "En 2012, la visión computacional presenció un gran avance cuando un grupo de investigadores de la Universidad de Toronto desarrolló AlexNet, que tenía en\n",
-        " que superó los mejores algoritmos de reconocimiento de imágenes y eso también por un amplio margen.\n",
-        " $^{[2]}$"
+        "*Convolutional Neural Network* $^{[2]}$"
       ]
     },
     {
@@ -162,7 +174,7 @@
       "source": [
         "import tensorflow as tf"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +191,7 @@
         "    pooling=None,\n",
         "    classes=1000)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +255,8 @@
         "4. Feng, V. (15 de julio de 2020). An Overview of ResNet and its Variants. *Towards Data Science*. Recuperado de: https://towardsdatascience.com/an-overview-of-resnet-and-its-variants-5281e2f56035\n",
         "5. Mutjaba, H. (28 de septiembre de 2020). Introduction to Resnet or Residual Network. *Great Learning*. Recuperado de: https://www.mygreatlearning.com/blog/resnet/ \n",
         "6. Boesch, G. (29 de agosto de 2021). Deep Residual Networks (ResNet, ResNet50) – Guide in 2021 *Viso.ai*. Recuperado de: https://viso.ai/deep-learning/resnet-residual-neural-network/\n",
-        "7. TensorFlow (12 de Noviembre de 2021) Recuperado de: https://www.tensorflow.org/guide/keras/preprocessing_layers "
+        "7. TensorFlow (12 de Noviembre de 2021) Recuperado de: https://www.tensorflow.org/guide/keras/preprocessing_layers\n",
+        "8. Pandian, V. (2021). UISketch Dataset *Kaggle* Recuperado de: https://www.kaggle.com/vinothpandian/uisketch "
       ]
     }
   ]
