--- a/TF.ipynb
+++ b/TF.ipynb
@@ -24,7 +24,7 @@
     "- Richard Fernández\n",
     "\n",
     "**Integrantes**:\n",
-    "- Luis Parodi\n",
+    "- Lucas Parodi\n",
     "- Eduardo Contreras\n",
     "- Dante Moreno\n",
     "\n",
