--- a/TF.ipynb
+++ b/TF.ipynb
@@ -455,168 +455,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los datos de entrada serán las imágenes:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]]], dtype=uint8)\n",
-      " array([[[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]]], dtype=uint8)\n",
-      " array([[[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       ...,\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]],\n",
-      "\n",
-      "       [[255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        ...,\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255],\n",
-      "        [255, 255, 255]]], dtype=uint8)]\n"
+      "(19000,)\n",
+      "(19000,)\n",
+      "[0 0 1 0 1]\n"
      ]
     }
    ],
    "source": [
-    "x_train = data['image'].to_numpy()\n",
-    "print(x_train[:3])"
+    "X = data['image'].values #.to_numpy()\n",
+    "y = data['medium'].values #.to_numpy()\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "print(y[:5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 1, 0, 1], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lut = {'digital': 0, 'paper': 1}\n",
+    "for i in range(len(y)):\n",
+    "    y[i] = lut[y[i]]\n",
+    "y[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(X)):\n",
+    "    X[i] = np.array(X[i], dtype=np.int64)\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrenamiento: [[[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]\n",
+      "\n",
+      " [[255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  ...\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]\n",
+      "  [255 255 255]]], donde cada uno es de dimensiones (224, 224, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.20, random_state = 0)\n",
+    "\n",
+    "print(f'Entrenamiento: {X_train[0]}, donde cada uno es de dimensiones {X_train[0].shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -627,30 +602,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "id": "ta5-CMxFF1T3"
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "_vTwiiKtF1T5"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Shape: (224, 224, 3)\n",
+      "Clases posibles: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_shape = X_train[0].shape\n",
+    "classes = 2\n",
+    "\n",
+    "print(f'Input Shape: {input_shape}')\n",
+    "print(f'Clases posibles: {classes}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.applications.ResNet50(\n",
+    "model = keras.applications.ResNet50(\n",
     "    include_top=True,\n",
-    "    weights=\"imagenet\",\n",
+    "    weights=None,\n",
     "    input_tensor=None,\n",
-    "    input_shape=None,\n",
+    "    input_shape=input_shape,\n",
     "    pooling=None,\n",
-    "    classes=1000)"
+    "    classes=classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=\"rmsprop\", loss=\"sparse_categorical_crossentropy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Error when checking input: expected input_3 to have 4 dimensions, but got array with shape (15200, 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-38-d768f88d541e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    817\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    818\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 819\u001b[1;33m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    820\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    821\u001b[0m   def evaluate(self,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_v2.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, model, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m    233\u001b[0m           \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    234\u001b[0m           \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 235\u001b[1;33m           use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    236\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m       \u001b[0mtotal_samples\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_get_total_number_of_samples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_data_adapter\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_v2.py\u001b[0m in \u001b[0;36m_process_training_inputs\u001b[1;34m(model, x, y, batch_size, epochs, sample_weights, class_weights, steps_per_epoch, validation_split, validation_data, validation_steps, shuffle, distribution_strategy, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m    591\u001b[0m         \u001b[0mmax_queue_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_queue_size\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    592\u001b[0m         \u001b[0mworkers\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mworkers\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 593\u001b[1;33m         use_multiprocessing=use_multiprocessing)\n\u001b[0m\u001b[0;32m    594\u001b[0m     \u001b[0mval_adapter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    595\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_v2.py\u001b[0m in \u001b[0;36m_process_inputs\u001b[1;34m(model, mode, x, y, batch_size, epochs, sample_weights, class_weights, shuffle, steps, distribution_strategy, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m    644\u001b[0m     \u001b[0mstandardize_function\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    645\u001b[0m     x, y, sample_weights = standardize(\n\u001b[1;32m--> 646\u001b[1;33m         x, y, sample_weight=sample_weights)\n\u001b[0m\u001b[0;32m    647\u001b[0m   \u001b[1;32melif\u001b[0m \u001b[0madapter_cls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mdata_adapter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mListsOfScalarsDataAdapter\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    648\u001b[0m     \u001b[0mstandardize_function\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstandardize\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, batch_size, check_steps, steps_name, steps, validation_split, shuffle, extract_tensors_from_dataset)\u001b[0m\n\u001b[0;32m   2381\u001b[0m         \u001b[0mis_dataset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mis_dataset\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2382\u001b[0m         \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2383\u001b[1;33m         batch_size=batch_size)\n\u001b[0m\u001b[0;32m   2384\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2385\u001b[0m   def _standardize_tensors(self, x, y, sample_weight, run_eagerly, dict_inputs,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_tensors\u001b[1;34m(self, x, y, sample_weight, run_eagerly, dict_inputs, is_dataset, class_weight, batch_size)\u001b[0m\n\u001b[0;32m   2408\u001b[0m           \u001b[0mfeed_input_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2409\u001b[0m           \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Don't enforce the batch size.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2410\u001b[1;33m           exception_prefix='input')\n\u001b[0m\u001b[0;32m   2411\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2412\u001b[0m     \u001b[1;31m# Get typespecs for the input data and sanitize it if necessary.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\keras\\engine\\training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    571\u001b[0m                            \u001b[1;34m': expected '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    572\u001b[0m                            \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' dimensions, but got array '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 573\u001b[1;33m                            'with shape ' + str(data_shape))\n\u001b[0m\u001b[0;32m    574\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    575\u001b[0m           \u001b[0mdata_shape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Error when checking input: expected input_3 to have 4 dimensions, but got array with shape (15200, 1)"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)"
    ]
   },
   {
