--- a/TF.ipynb
+++ b/TF.ipynb
@@ -1041,35 +1041,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "X_train = torch.from_numpy(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#y_train = np.array([int(y_i) for y_i in y_train], dtype=np.uin16)\n",
-    "y_train = torch.tensor([int(i) for i in y_train])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "-RUBzFthF1T6"
@@ -1080,12 +1051,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "id": "PeVHmeXNF1T7"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def which_one(pred):\n",
+    "    res = []\n",
+    "    for i, v in enumerate(pred):\n",
+    "        res.append([i,v])\n",
+    "    res.sort(key=lambda x: x[1], reverse=True)\n",
+    "    return res[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [0]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n",
+      "Pred: 1 Test: [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print(f'Pred: {which_one(y_pred[i])} Test: {y_test[i]}')"
+   ]
   },
   {
    "cell_type": "markdown",
