--- a/FINAL.ipynb
+++ b/FINAL.ipynb
@@ -1640,7 +1640,9 @@
     "id": "xgOwAPp9YJAZ"
    },
    "source": [
-    "El modelo ResNet puede presentar una mejora "
+    "El modelo ResNet es más complejo que una red convolucional clásica CNN. En este caso, las 50 capas de ResNet resultan en un AUC de $0.92$.\n",
+    "\n",
+    "Este modelo predictivo puede ser usado para organizar bosquejos aleatorios."
    ]
   },
   {
@@ -1657,7 +1659,8 @@
    "metadata": {},
    "source": [
     "* La implementación de ResNet de 50 capas (ResNet50) presente en el módulo Keras necesita imágenes que tengan dimensiones $(32n,32n,3)$; donde $n$ es un número entero mayor a $0$. En el dataset UISketch, las imágenes tienen el tamaño $(224,224,3)$; que cumple el requisito de ser múltiplo de 32, pero también crea una red compleja. Por lo tanto, un preprocesamiento más dedicado podría guardar imágenes redimensionadas para disminuir la complejidad.\n",
-    "* Implementar una versión de ResNet construida manualmente para poder tener una red de menos capas."
+    "* Implementar una versión de ResNet construida manualmente para poder tener una red de menos capas, como la implementación original de He et al. $^{[3]}$.\n",
+    "* Probar su desempeño en la clasificación multicategórica, y ad"
    ]
   },
   {
