--- a/TF_v1.ipynb
+++ b/TF_v1.ipynb
@@ -1660,7 +1660,7 @@
    "source": [
     "* La implementación de ResNet de 50 capas (ResNet50) presente en el módulo Keras necesita imágenes que tengan dimensiones $(32n,32n,3)$; donde $n$ es un número entero mayor a $0$. En el dataset UISketch, las imágenes tienen el tamaño $(224,224,3)$; que cumple el requisito de ser múltiplo de 32, pero también crea una red compleja. Por lo tanto, un preprocesamiento más dedicado podría guardar imágenes redimensionadas para disminuir la complejidad.\n",
     "* Implementar una versión de ResNet construida manualmente para poder tener una red de menos capas, como la implementación original de He et al. $^{[3]}$.\n",
-    "* Probar su desempeño en la clasificación multicategórica, y ad"
+    "* Probar su desempeño en la clasificación multicategórica, y adaptar las gráficas ROC para mostrar resultados por cada clase."
    ]
   },
   {
