--- a/TF_v1.ipynb
+++ b/TF_v1.ipynb
@@ -1640,9 +1640,24 @@
     "id": "xgOwAPp9YJAZ"
    },
    "source": [
-    "El modelo ResNet es más complejo que una red convolucional clásica CNN. En este caso, las 50 capas de ResNet resultan en un AUC de $0.92$.\n",
+    "* El modelo ResNet es más complejo que una red convolucional clásica CNN. En este caso, las 50 capas de ResNet resultan en un AUC de $0.92$. El modelo CNN con el que se ha comparado a tenido que ser limitado a una capa de entrada Flatten, y una capa intermedia de 128 neuronas.\n",
     "\n",
-    "Este modelo predictivo puede ser usado para organizar bosquejos aleatorios."
+    "* Este modelo predictivo puede ser usado para organizar bosquejos aleatorios. Por ejemplo, \n",
+    "\n",
+    "* El tiempo de procesamiento de ResNet puede crecer exponencialmente si se ingresan datos en e\n",
+    "\n",
+    "--- \n",
+    "Sin embargo, llegar a estos resultados requiere de un número adecuado de iteraciones y del componente aleatorio. Así, el modelo ResNet empezó con la siguiente curva ROC, y AUC de $0.31$:\n",
+    "\n",
+    "<img src='https://media.discordapp.net/attachments/913197714882297900/913910854049730600/unknown.png?width=703&height=406'>\n",
+    "\n",
+    "El cual evoluciona a un AUC de $0.72$ en iteraciones futuras:\n",
+    "\n",
+    "<img src='https://media.discordapp.net/attachments/913197714882297900/913910950199959602/unknown.png?width=917&height=406'>\n",
+    "\n",
+    "Con AUC de $0.84$\n",
+    "\n",
+    "<img src='https://media.discordapp.net/attachments/913197714882297900/913910980474454127/unknown.png?width=998&height=406'>"
    ]
   },
   {
