--- a/TF_v1.ipynb
+++ b/TF_v1.ipynb
@@ -1234,7 +1234,7 @@
     "id": "-RUBzFthF1T6"
    },
    "source": [
-    "### 3.1. Resultados del modelo"
+    "## 4 Resultados del modelo"
    ]
   },
   {
@@ -1642,9 +1642,9 @@
    "source": [
     "* El modelo ResNet es más complejo que una red convolucional clásica CNN. En este caso, las 50 capas de ResNet resultan en un AUC de $0.92$. El modelo CNN con el que se ha comparado a tenido que ser limitado a una capa de entrada Flatten, y una capa intermedia de 128 neuronas.\n",
     "\n",
-    "* Este modelo predictivo puede ser usado para organizar bosquejos aleatorios. Por ejemplo, \n",
+    "* Este modelo predictivo puede ser usado para organizar bosquejos aleatorios. Por ejemplo, sería de utilidad para un diseñador que tenga archivos sueltos de sus bosquejos y no pueda analizarlos todos.\n",
     "\n",
-    "* El tiempo de procesamiento de ResNet puede crecer exponencialmente si se ingresan datos en e\n",
+    "* El tiempo de procesamiento de ResNet puede crecer exponencialmente si no se realiza un correcto preprocesamiento y un número adecuado de epochs.\n",
     "\n",
     "--- \n",
     "Sin embargo, llegar a estos resultados requiere de un número adecuado de iteraciones y del componente aleatorio. Así, el modelo ResNet empezó con la siguiente curva ROC, y AUC de $0.31$:\n",
