--- a/TF_Contreras_Eduardo.ipynb
+++ b/TF_Contreras_Eduardo.ipynb
@@ -9,14 +9,18 @@
     "# Deep Learning haciendo uso de CNN: ResNet\n",
     "---\n",
     "### Trabajo Final del curso Machine Learning\n",
-    "### Docente: M.Sc. Richard Fernández \n",
+    "### Docente: M.Sc. Richard Fernández "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integrantes:\n",
     "\n",
-    "**Integrantes**:\n",
-    "- Lucas Parodi Roman\n",
-    "- Eduardo Contreras\n",
-    "- Dante Moreno\n",
-    "\n",
-    "\n"
+    "- Parodi Roman, Luis\n",
+    "- Contreras Inostroza, Eduardo\n",
+    "- Moreno Carhuacusma, Dante"
    ]
   },
   {
@@ -45,7 +49,7 @@
     "id": "tiISQaUzF1Tl"
    },
    "source": [
-    "## 2. Marco Teórico"
+    "## 2. Marco Teórico: Desarrollo de la Arquitectura "
    ]
   },
   {
@@ -164,11 +168,27 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### OBJETIVO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implementar una red neuronal residual de 50 capas (ResNet50 de Keras) para una tarea de clasificación. \n",
+    "En este caso, sería identificar los bosquejos de tipo *button* y los de tipo *image*.\n",
+    "Además, evaluar su rendimiento y comparar con una CNN común."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "eN8B_2H7F1Tx"
    },
    "source": [
-    "## 3. Caso de Estudio"
+    "## 3. Descripción del caso de estudio"
    ]
   },
   {
@@ -343,7 +363,7 @@
     "--- | --- | ---\n",
     "alert | paper | pen\n",
     "\n",
-    "Es decir, una alerta dibujada en papel, con un lápiz."
+    "Es decir, a continuación vemos la imagen de una alerta dibujada en papel, con un lápiz."
    ]
   },
   {
@@ -586,6 +606,13 @@
    ],
    "source": [
     "sns.countplot(data['label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predecir la columna label como está es una tarea de clasificación multicategórica. Para mantener una co"
    ]
   },
   {
@@ -1074,7 +1101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. ResNet"
+    "## 4. Modelo ResNet"
    ]
   },
   {
@@ -1234,7 +1261,7 @@
     "id": "-RUBzFthF1T6"
    },
    "source": [
-    "## 4 Resultados del modelo"
+    "### Resultados del modelo"
    ]
   },
   {
@@ -1486,7 +1513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. CNN"
+    "### Comparación con CNN"
    ]
   },
   {
@@ -1631,7 +1658,7 @@
     "id": "ES3uCxmLF1T8"
    },
    "source": [
-    "## 4. Conclusiones"
+    "## 5. Conclusiones"
    ]
   },
   {
@@ -1666,7 +1693,7 @@
     "id": "7lOafM-oF1T9"
    },
    "source": [
-    "## 5. Recomendaciones"
+    "## 6. Recomendaciones"
    ]
   },
   {
