--- a/TF_Contreras_Eduardo.ipynb
+++ b/TF_Contreras_Eduardo.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Integrantes:\n",
+    "## 1. Apellidos y Nombres de los Integrantes:\n",
     "\n",
     "- Parodi Roman, Luis\n",
     "- Contreras Inostroza, Eduardo\n",
@@ -29,7 +29,7 @@
     "id": "4kjyNVnaF1Ti"
    },
    "source": [
-    "## 1. Introducción"
+    "## Introducción"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "id": "tiISQaUzF1Tl"
    },
    "source": [
-    "## 2. Marco Teórico: Desarrollo de la Arquitectura "
+    "## A. Marco Teórico: Desarrollo de la Arquitectura "
    ]
   },
   {
@@ -58,7 +58,7 @@
     "id": "h8yVeSN_F1Tn"
    },
    "source": [
-    "### 2.1. Redes Neuronales Convolucionales"
+    "### A.1. Redes Neuronales Convolucionales"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "id": "6gN9CKOfF1Tq"
    },
    "source": [
-    "### 2.2. Aprendizaje Residual"
+    "### A.2. Aprendizaje Residual"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "id": "i6hxKM98F1Tu"
    },
    "source": [
-    "### 2.3. Redes Residuales"
+    "### A.3. Redes Residuales"
    ]
   },
   {
@@ -150,7 +150,7 @@
     "id": "i6hxKM98F1Tu"
    },
    "source": [
-    "### 2.4. Arquitectura de ResNet50"
+    "### 2. Arquitectura de ResNet50"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OBJETIVO"
+    "## 3. Objetivo"
    ]
   },
   {
@@ -188,7 +188,7 @@
     "id": "eN8B_2H7F1Tx"
    },
    "source": [
-    "## 3. Descripción del caso de estudio"
+    "## 4. Descripción del caso de estudio"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. Exploración de datos"
+    "### Exploración de datos"
    ]
   },
   {
@@ -660,14 +660,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2. Preprocesamiento"
+    "### Preprocesamiento"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.1. Under Sampling"
+    "### Under Sampling"
    ]
   },
   {
@@ -944,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.2. Reshaping"
+    "### Reshaping"
    ]
   },
   {
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2.3. Dividir en Training y Test"
+    "### Dividir en Training y Test"
    ]
   },
   {
@@ -1101,7 +1101,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Modelo ResNet"
+    "## 5. Resultados del modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entrenar"
    ]
   },
   {
@@ -1261,7 +1268,7 @@
     "id": "-RUBzFthF1T6"
    },
    "source": [
-    "### Resultados del modelo"
+    "### Métricas"
    ]
   },
   {
@@ -1658,7 +1665,7 @@
     "id": "ES3uCxmLF1T8"
    },
    "source": [
-    "## 5. Conclusiones"
+    "## 6. Conclusiones"
    ]
   },
   {
@@ -1693,7 +1700,7 @@
     "id": "7lOafM-oF1T9"
    },
    "source": [
-    "## 6. Recomendaciones"
+    "## 7. Recomendaciones"
    ]
   },
   {
